Content section fixed alignment using flexbox Added images with alt their text and dimension for this section changed background color to grab attention

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .container{
     display: flex;
     justify-content: space-between;
@@ -21,3 +22,39 @@ a {
     color: red;
     text-decoration: none;
 }
+
+.content-container{
+    height: auto;
+    padding: 16px;
+    background-color: rgb(245, 90, 90);
+    display: flex;
+    flex-direction: column; 
+    /* Stack elements vertical! */
+    border: 4px solid red;
+    justify-content: center; 
+    align-items: center;  
+    margin-top: 5%;
+
+}
+
+.images-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+h1{
+    margin-bottom: 10px;
+}
+
+.placeholder{
+    margin: 5px;
+    /* Add space around the images. */
+}
+
+
+
+
+
+
